--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,25 @@ services:
       - '8001:80'
     depends_on:
       - user_service
+    restart: unless-stopped
 
   user_service:
     build: ./services/user
     ports:
       - '8002:80'
+    restart: unless-stopped
 
   notification_service:
     build: ./services/notification
     ports:
       - '8003:80'
+    restart: unless-stopped
 
   analysis_service:
     build: ./services/analysis
     ports:
       - '8004:80'
+    restart: unless-stopped
 
 networks:
   default:
