Update network configuration for notification_service to use default network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     environment:
       - NODE_ENV=production
     networks:
-      - monitoring_network
+      - default
 
   analysis_service:
     build: ./services/analysis
