--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
     restart: unless-stopped
     environment:
       - NODE_ENV=production
+    healthcheck:
+      test: [ 'CMD', 'curl', '-f', 'http://localhost' ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     networks:
       - default
       - monitoring_network
